--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "uuid": "^9.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.0.0",  // Added @radix-ui/react-toast dependency
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
